--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "heather",
+  "name": "react-music-player",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "howler": "^2.2.3",
+    "babel": "@babel/plugin-proposal-private-property-in-object",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
+    "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
